cluster/apps/dev/smtp4dev/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp4dev
  namespace: dev
  labels:
    app.kubernetes.io/name: smtp4dev
spec:
  selector:
    matchLabels:
      app: smtp4dev
  template:
    metadata:
      labels:
        app: smtp4dev
    spec:
      containers:
        - name: smtp4dev
          image: rnwood/smtp4dev:3.1.3-ci20220418101
          resources:
            requests:
              cpu: 100m
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 25
              name: smtp
            - containerPort: 80
              name: http
            - containerPort: 143
              name: imap
