cluster/apps/dev/smtp4dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smtp4dev
  namespace: dev
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.networking.svc.cluster.local/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}"
spec:
  ingressClassName: nginx
  tls:
    - secretName: smtp4dev-tls
      hosts:
        - smtp4dev.${SECRET_DOMAIN}
  rules:
    - host: smtp4dev.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: smtp4dev
                port:
                  number: 80
